Fix contrast

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -40,11 +40,11 @@ $width: 486px
   text-shadow: 0 2px 4px rgba(#000, 0.1)
 
 .header-subtitle
-  color: $plum-dark
+  color: $plum-light
   max-width: 40em
   a
-    border-bottom: 1px solid rgba($plum-dark, 0.2)
-    color: $plum-dark
+    border-bottom: 1px solid rgba($plum-light, 0.2)
+    color: $plum-light
     &:hover
       border-bottom-color: $plum-light
       color: $plum-light
